Fix width of image and align items properly

--- a/css/main.css
+++ b/css/main.css
@@ -7,24 +7,20 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
-body {
-  margin: 0;
-}
 
 img {
-  width: 25%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  width: 100px;
+  display: block;
 }
 
 .image {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   margin: 0;
   padding-top: .75rem;
+  padding-bottom: .75rem;
 }
 
 h1 {
@@ -78,12 +74,12 @@ li:nth-child(2) {
 }
 
 li:nth-child(3) {
-  background-color: #ccc;
+  background-color: #aaa;
   width: 25%;
 }
 
 li:last-child {
-  background-color: #aaa;
+  background-color: #999;
   width: 25%;
 }
 
@@ -92,22 +88,21 @@ h2, p {
 }
 
 .btn {
-  background-color: #999;
-  color: #f2f2f2;
-  text-decoration: none;
-  border-radius: 8px;
-  padding: .6em .75em .3em;
-  margin-bottom: .5em;
+  color: #ccc;
+  background-color: #333;
+  border-radius: 7px;
+  margin: .5rem;
   display: flex;
+  padding: .75rem;
   flex-wrap: wrap;
   flex-grow: 1;
 }
 
 .btn-small {
   font-size: .875rem;
-  margin-bottom: 0;
+  text-decoration: none;
 }
 
 .btn:hover {
-  background-color: #333;
+  background-color: #000;
 }
